# DjangoChannelsChat

./: pyproject.toml
JustSignals/: db.sqlite3  manage.py
JustSignals/JustSignals/: asgi.py  settings.py  urls.py  wsgi.py
